--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 attrs==24.3.0
+beautifulsoup4==4.12.3
 certifi==2024.12.14
+charset-normalizer==3.4.1
+et_xmlfile==2.0.0
 h11==0.14.0
 idna==3.10
+lxml==5.3.0
 numpy==2.2.2
+openpyxl==3.1.5
 outcome==1.3.0.post0
 pandas==2.2.3
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
-selenium==4.28.1
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.6
 trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
