--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+altgraph==0.17.4
 attrs==24.3.0
 beautifulsoup4==4.12.3
 certifi==2024.12.14
 charset-normalizer==3.4.1
+customtkinter==5.2.2
+darkdetect==0.8.0
 et_xmlfile==2.0.0
 h11==0.14.0
 idna==3.10
@@ -9,11 +12,16 @@ lxml==5.3.0
 numpy==2.2.2
 openpyxl==3.1.5
 outcome==1.3.0.post0
+packaging==24.2
 pandas==2.2.3
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2025.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
